# vs_git_repro

./: CMakeLists.txt
