cmake_minimum_required(VERSION 3.15)
include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG        release-1.8.0
)

FetchContent_GetProperties(googletest)
if(NOT googletest_POPULATED)
  FetchContent_Populate(googletest)
  add_subdirectory(${googletest_SOURCE_DIR} ${googletest_BINARY_DIR})
endif()

PROJECT(dummy C CXX)

add_executable(dummy main.cpp)

target_link_libraries(dummy PUBLIC googletest)
